add: UD1_Actividad2_pruebas hechas en casa.

--- a/UD1_Actividad 1/.gitignore
+++ b/UD1_Actividad 1/.gitignore
@@ -27,3 +27,10 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+# Archivos de configuración de IntelliJ específicos
+.idea/
+*.iml
+
+# Archivos compilados de Java
+*.class
